[package]
name = "xrp-send"
version = "0.1.0"
edition = "2021"
description = "A simple XRP transaction library"

[lib]
name = "xrp_send"
path = "src/lib.rs"

[[bin]]
name = "xrp-test"
path = "src/bin/main.rs"

[dependencies]
bs58 = "0.5.1"
byteorder = "1.5.0"
dotenv = "0.15.0"
hex = "0.4.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"]}
ring = "0.17.14"
ripemd = "0.1.3"
serde = "1.0.225"
serde_json = "1.0.145"
thiserror = "1.0"
